{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Camera",
            "id": "a63e187b-c8e1-4051-aff5-b42106491002",
            "actions": [
                {
                    "name": "MouseZoom",
                    "type": "Value",
                    "id": "130195b1-9774-47ed-8130-6c0ab76e852e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GamePadZoom",
                    "type": "Value",
                    "id": "0f0a1eca-30ab-4c43-8067-40bdb38c7aa4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4be0fc6c-bdcc-4289-b947-403c713ef5e1",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d44eb637-fa54-4f2c-b819-4f12602f6b32",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamePadZoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "182d38b5-05d5-4cf6-8efe-7af4882254b4",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamePadZoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6ace5be8-4769-41f2-9dbf-43da172d83db",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamePadZoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}